--- a/index.html
+++ b/index.html
@@ -1,175 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="FAQ Accordion Card | solution to the Frontend Mentor challenge"
-    />
-    <title>FAQ Accordion Card</title>
-    <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./assets/images/favicon-32x32.png"
-    />
-  </head>
-  <body>
-    <main>
-      <section class="faq_section">
-        <img src="./assets/images/illustration-box-desktop.svg" alt="" />
-        <div class="illustration">
-          <picture>
-            <source
-              srcset="./assets/images/illustration-woman-online-mobile.svg"
-              media="(max-width: 1005px)"
-            />
-            <img
-              src="./assets/images/illustration-woman-online-desktop.svg"
-              alt=""
-            />
-          </picture>
-        </div>
 
-        <div class="faq">
-          <h1>FAQ</h1>
-          <div class="accordion">
-            <div class="accordion_item">
-              <input type="radio" name="accordion" id="accordion_item_1" />
-              <div class="accordion_item_inner">
-                <div class="accordion_item_question">
-                  <label for="accordion_item_1"></label>
-                  <h2>How many team members can I invite?</h2>
-                  <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                      d="M1 .799l4 4 4-4"
-                      stroke="#F47B56"
-                      stroke-width="2"
-                      fill="none"
-                      fill-rule="evenodd"
-                    />
-                  </svg>
-                </div>
-                <div class="accordion_item_answer">
-                  <p>
-                    You can invite up to 2 additional users on the Free plan.
-                    There is no limit on team members for the Premium plan.
-                  </p>
-                </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="FAQ Accordion Card | solution to the Frontend Mentor challenge" />
+  <title>FAQ Accordion Card</title>
+  <link rel="stylesheet" href="./css/styles.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet" />
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png" />
+</head>
+
+<body>
+  <main>
+    <section class="faq_section">
+      <img src="./assets/images/illustration-box-desktop.svg" alt="" />
+      <div class="illustration">
+        <picture>
+          <source srcset="./assets/images/illustration-woman-online-mobile.svg" media="(max-width: 1005px)" />
+          <img src="./assets/images/illustration-woman-online-desktop.svg" alt="" />
+        </picture>
+      </div>
+
+      <div class="faq">
+        <h1>FAQ</h1>
+        <div class="accordion">
+
+          <div class="accordion_item">
+            <input type="radio" name="accordion" id="accordion_item_1" />
+            <div class="accordion_item_inner">
+              <label for="accordion_item_1" class="accordion_item_question">
+                <h2>How many team members can I invite?</h2>
+                <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M1 .799l4 4 4-4" stroke="#F47B56" stroke-width="2" fill="none" fill-rule="evenodd" />
+                </svg>
+              </label>
+              <div class="accordion_item_answer">
+                <p>
+                  You can invite up to 2 additional users on the Free plan.
+                  There is no limit on team members for the Premium plan.
+                </p>
               </div>
             </div>
+          </div>
 
-            <div class="accordion_item">
-              <input type="radio" name="accordion" id="accordion_item_2" />
-              <div class="accordion_item_inner">
-                <div class="accordion_item_question">
-                  <label for="accordion_item_2"></label>
-                  <h2>What is the maximum file upload size?</h2>
-                  <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                      d="M1 .799l4 4 4-4"
-                      stroke="#F47B56"
-                      stroke-width="2"
-                      fill="none"
-                      fill-rule="evenodd"
-                    />
-                  </svg>
-                </div>
-                <div class="accordion_item_answer">
-                  <p>
-                    No more than 2GB. All files in your account must fit your
-                    allotted storage space.
-                  </p>
-                </div>
+          <div class="accordion_item">
+            <input type="radio" name="accordion" id="accordion_item_2" />
+            <div class="accordion_item_inner">
+              <label for="accordion_item_2" class="accordion_item_question">
+                <h2>What is the maximum file upload size?</h2>
+                <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M1 .799l4 4 4-4" stroke="#F47B56" stroke-width="2" fill="none" fill-rule="evenodd" />
+                </svg>
+              </label>
+              <div class="accordion_item_answer">
+                <p>
+                  No more than 2GB. All files in your account must fit your
+                  allotted storage space.
+                </p>
               </div>
             </div>
+          </div>
 
-            <div class="accordion_item">
-              <input type="radio" name="accordion" id="accordion_item_3" />
-              <div class="accordion_item_inner">
-                <div class="accordion_item_question">
-                  <label for="accordion_item_3"></label>
-                  <h2>How do I reset my password?</h2>
-                  <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                      d="M1 .799l4 4 4-4"
-                      stroke="#F47B56"
-                      stroke-width="2"
-                      fill="none"
-                      fill-rule="evenodd"
-                    />
-                  </svg>
-                </div>
-                <div class="accordion_item_answer">
-                  <p>
-                    Click “Forgot password” from the login page or “Change
-                    password” from your profile page. A reset link will be
-                    emailed to you.
-                  </p>
-                </div>
+          <div class="accordion_item">
+            <input type="radio" name="accordion" id="accordion_item_3" />
+            <div class="accordion_item_inner">
+              <label for="accordion_item_3" class="accordion_item_question">
+                <h2>How do I reset my password?</h2>
+                <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M1 .799l4 4 4-4" stroke="#F47B56" stroke-width="2" fill="none" fill-rule="evenodd" />
+                </svg>
+              </label>
+              <div class="accordion_item_answer">
+                <p>
+                  Click “Forgot password” from the login page or “Change
+                  password” from your profile page. A reset link will be
+                  emailed to you.
+                </p>
               </div>
             </div>
+          </div>
 
-            <div class="accordion_item">
-              <input type="radio" name="accordion" id="accordion_item_4" />
-              <div class="accordion_item_inner">
-                <div class="accordion_item_question">
-                  <label for="accordion_item_4"></label>
-                  <h2>Can I cancel my subscription?</h2>
-                  <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                      d="M1 .799l4 4 4-4"
-                      stroke="#F47B56"
-                      stroke-width="2"
-                      fill="none"
-                      fill-rule="evenodd"
-                    />
-                  </svg>
-                </div>
-                <div class="accordion_item_answer">
-                  <p>
-                    Yes! Send us a message and we’ll process your request no
-                    questions asked.
-                  </p>
-                </div>
+          <div class="accordion_item">
+            <input type="radio" name="accordion" id="accordion_item_4" />
+            <div class="accordion_item_inner">
+              <label for="accordion_item_4" class="accordion_item_question">
+                <h2>Can I cancel my subscription?</h2>
+                <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M1 .799l4 4 4-4" stroke="#F47B56" stroke-width="2" fill="none" fill-rule="evenodd" />
+                </svg>
+              </label>
+              <div class="accordion_item_answer">
+                <p>
+                  Yes! Send us a message and we’ll process your request no
+                  questions asked.
+                </p>
               </div>
             </div>
+          </div>
 
-            <div class="accordion_item">
-              <input type="radio" name="accordion" id="accordion_item_5" />
-              <div class="accordion_item_inner">
-                <div class="accordion_item_question">
-                  <label for="accordion_item_5"></label>
-                  <h2>Do you provide additional support?</h2>
-                  <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                      d="M1 .799l4 4 4-4"
-                      stroke="#F47B56"
-                      stroke-width="2"
-                      fill="none"
-                      fill-rule="evenodd"
-                    />
-                  </svg>
-                </div>
-                <div class="accordion_item_answer">
-                  <p>
-                    Chat and email support is available 24/7. Phone lines are
-                    open during normal business hours.
-                  </p>
-                </div>
+          <div class="accordion_item">
+            <input type="radio" name="accordion" id="accordion_item_5" />
+            <div class="accordion_item_inner">
+              <label for="accordion_item_5" class="accordion_item_question">
+                <h2>Do you provide additional support?</h2>
+                <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M1 .799l4 4 4-4" stroke="#F47B56" stroke-width="2" fill="none" fill-rule="evenodd" />
+                </svg>
+              </label>
+              <div class="accordion_item_answer">
+                <p>
+                  Chat and email support is available 24/7. Phone lines are
+                  open during normal business hours.
+                </p>
               </div>
             </div>
           </div>
         </div>
-      </section>
-    </main>
-  </body>
+      </div>
+    </section>
+  </main>
+</body>
+
 </html>
